apps/actual-budget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  labels:
    name: actual-budget
